--- a/blog/static/blog/css/detail.css
+++ b/blog/static/blog/css/detail.css
@@ -1,5 +1,5 @@
 .detail-page {
-    width: 55%;
+    width: 40%;
     margin-right: auto;
     margin-left: auto;
 }
@@ -8,27 +8,51 @@
     width: 100%;
 }
 
+.map h3{
+    margin: 10% 0 5% 0;
+}
+
 #naver-map {
     width: 100%;
     height: 500px;
-    margin-bottom: 50px;
+    margin-bottom: 10%;
 }
 
 .detail-page h1{
     margin-top: 5%;
 }
 
-.detail-page a{
-    float: right;
-    margin-bottom: 20px;
+.btns {
+    display: flex;
+    flex-direction: row-reverse;
+    /* margin-bottom: 20px; */
 }
-
 .detail-page a img{
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
 .detail-page p, h4{
     font-family: 'MapoPeacefull';
     margin-top: 20px;
     margin-bottom: 5%;
+}
+
+.content-box{
+    padding:20px;
+    background-color: #fafafa;
+    margin-top: 20px;
+    border-radius: 4px;
+}
+
+.home-btn{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10%;
+}
+
+.goToHomes{
+    margin: 50px 0 50px 0;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
 }
