--- a/blog/templates/edit.html
+++ b/blog/templates/edit.html
@@ -1,40 +1,61 @@
 {% extends "mapTemplate.html" %}
 {% load static %}
 
+{% block title %}
+Muklog | edit
+{% endblock %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'blog/css/write.css' %}">
+{% endblock %}
+
 {% block content %}
-<style>
+<!-- <style>
 #naver-map{
     width:500px;
     height:500px;
 }
-</style>
-<div id="naver-map"></div>
-<div>
-    <input type="text" id="search" value="">
-    <button id="search-btn">검색</button>
-    <div id="search-list">
+</style> -->
+<div class="write-page">
+    <div id="naver-map"></div>
+    <div id="map-search">
+        <input type="text" id="search" placeholder="주소를 검색해보세요.">
+        <button id="search-btn">검색</button>
     </div>
+    <div id="search-list"></div>
     <form method='post' action="{% url 'edit' blog.id %}" enctype="multipart/form-data">
         {% csrf_token %}
-        <h4>title: </h4>
-        <input type="text" name="title" value='{{blog.title}}'>
-        <br>
-        <input type="text" name="address" id="place-input" value="{{ blog.address }}"/>
-        <br>
-        <h4>body: </h4>
-        <textarea cols="40" rows="10" name="body">{{ blog.body }}</textarea>
-        <br>
-        <br>
-        <input type="text" name="lat" id="map-lat" value="{{ blog.latitude }}">
-        <input type="text" name="lng" id="map-lng" value="{{ blog.longtitude }}">
-        <input type="file" name="image" id="imageUpload" accept="media/*">
-        <input type="submit" value="submit">
+        <!-- <h4>title: </h4> -->
+        <div class="write-contents">
+            <input id="post-title" type="text" name="title" value='{{blog.title}}'>
+            <div class="underBar"></div>
+            <input type="text" name="address" id="place-input" value="{{ blog.address }}" />
+            <input type="file" name="image" id="imageUpload" accept="media/*">
+            <!-- <h4>body: </h4> -->
+            <textarea class="autosize" onkeydown="resize(this)" onkeyup="resize(this)"
+                name="body">{{ blog.body }}</textarea>
+            <input type="text" name="lat" id="map-lat" value="{{ blog.latitude }}" hidden>
+            <input type="text" name="lng" id="map-lng" value="{{ blog.longtitude }}" hidden>
+            <input id="uploadButton" type="submit" value="올리기">
+        </div>
     </form>
+    <div class="goToHomes">
+        <a href="{% url 'home' %}"><img src="{% static 'shared/image/mapHome.png'%}" alt="goToMap"></a>
+        <a href="{% url 'tempHome' %}"><img src="{% static 'shared/image/blogHome.png'%}" alt="goToBlog"></a>
+    </div>
 </div>
 {% endblock %}
 
 {% block javascript %}
-<script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId={{ naver_client_id }}&submodules=geocoder"></script>
+<script>
+    function resize(obj) {
+        obj.style.height = "1px";
+        obj.style.height = (12 + obj.scrollHeight) + "px";
+    }
+</script>
+<script type="text/javascript"
+    src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId={{ naver_client_id }}&submodules=geocoder">
+</script>
 <script type="module">
     import SearchMap from "/static/blog/js/SearchMap.js"
     
